--- a/TransformationsUI-Demo/Info.plist
+++ b/TransformationsUI-Demo/Info.plist
@@ -16,10 +16,27 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.filestack.TransformationsUIDemo</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>transformationsuidemo</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>The demo needs access to the camera.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This demo needs access to the photo library in order to be able to pick pictures from it.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
